--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 ---
 layout: default
 ---
+<style type="text/css">
+  
+  .mdl-color--primary {
+background-image: url("{{ site.baseurl }}/images/page/man.png");
 
+}
+</style>
   <main class="mdl-layout__content">
     <div class="mdl-layout__tab-panel is-active" id="overview">
       <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
