--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ layout: default
             </div>
           </div>
           <div class="mdl-card__actions">
-            <a href="/contact.html" class="mdl-button">Ver más</a>
+            <a href="{{ site.baseurl }}/contact.html" class="mdl-button">Ver más</a>
           </div>
         </div>
       </section>
