--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@ layout: default
           <div class="mdl-card__supporting-text mdl-grid mdl-grid--no-spacing">
             <h4 class="mdl-cell mdl-cell--12-col">Integrantes</h4>
             <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
-              <div class="section__circle-container__circle mdl-color--primary"></div>
+              <div class="section__circle-container__circle mdl-color--primary">
+                <img src="{{ site.baseurl }}/images/page/man.png">
+              </div>
             </div>
             <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
               <h5>Persona 1</h5>
